Added answers to ws4 1d,e

--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# Worksheet 04\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Pratham Shroff  \n",
+    "UID: U00574969\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -81,7 +81,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Lloyd's algorithm always converges. It is guaranteed to do so because it is a greedy algorithm that keeps decreasing the value of the objective function. This may happen slowly, hence a good initializer is recommended. Due to this, in real-world applications, often the algorithm is stopped once the distribution is \"good enough\". Convergence can also be accelerated by over-relaxing the points.\n",
+    "\n",
+    "References:\n",
+    "\n",
+    "i) https://math.gmu.edu/~memelian/pubs/pdfs/DEJ_SIAM_lloyd.pdf\n",
+    "\n",
+    "ii) http://www.stat.yale.edu/~hz68/Lloyd.pdf"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -93,7 +101,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Both K means and K means ++ are clustering methods used for unsupervised learning.\n",
+    "\n",
+    "The main difference between the two stems from the difference in the selection of the centroids around which the clustering takes place.\n",
+    "\n",
+    "Further, K means ++ improves upon K means by being independent on the initialization of the centroid."
+   ]
   },
   {
    "cell_type": "markdown",
