--- a/worksheets/worksheet_04.ipynb
+++ b/worksheets/worksheet_04.ipynb
@@ -45,7 +45,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**First round:**\n",
+    "\n",
+    "dataset: `[0, .5]` and `[1.5, 2, 6, 6.5, 7]`\n",
+    "\n",
+    "centroids: `[.25, 4.6]`\n",
+    "\n",
+    "**Second round:**\n",
+    "\n",
+    "dataset: `[0, .5, 1.5, 2]` and `[6, 6.5, 7]`\n",
+    "\n",
+    "centroids: `[1, 6.5]`\n",
+    "\n",
+    "*We can tell at this step itself that we do not need to go forward seeing that the centroids are exactly at the center.*\n",
+    "\n",
+    "**Third round:**\n",
+    "\n",
+    "dataset: `[0, .5, 1.5, 2]` and `[6, 6.5, 7]`\n",
+    "\n",
+    "centroids: `[1, 6.5]`\n",
+    "\n",
+    "*Now, we can confirm that the clustering method is complete and this is the final dataset.*\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,7 +79,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function can be defined as the euclidean distance of each training example with its cluster center and that summed over the k clusters. More often, this is the squared euclidean distance with the data points assigned to the cluster that minimizes this squared distance.\n",
+    "\n",
+    "References:\n",
+    "\n",
+    "i) https://towardsdatascience.com/k-means-clustering-8e1e64c1561c\n",
+    "\n",
+    "ii) https://cseweb.ucsd.edu/~dasgupta/291-unsup/lec2.pdf"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,7 +99,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "This is because the centroid positions are initially chosen at random, k-means can return significantly different results even on successive identical runs. To solve this, one could run k-means multiple times and choose the result with the best quality metrics.\n",
+    "\n",
+    "Reference:\n",
+    "\n",
+    "https://developers.google.com/machine-learning/clustering/algorithm/run-algorithm"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,7 +155,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "One of the worst limitations is that its worst case time is exponential (not sure, but probably NP-Hard).\n",
+    "\n",
+    "It cannot detect patterns and probably not the best when it comes to highly overlapping clusters. This can be tackled by good initialization but that can be tricky in practice."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,7 +198,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "While I would immediately disregard 4 and 5, I would choose 2 rather than 3.\n",
+    "\n",
+    "My choice would be 2 because in that chart, most of the points are near about the red dotted line. In case of 3, even though the clusters look more homogeneous in terms of size, a lot of them are below the red line mkaing 2 a better choice in my regard."
+   ]
   }
  ],
  "metadata": {
